Add target 'final' to Makefile to build bibliography and update bibliography handling in main book file.

--- a/book.tex
+++ b/book.tex
@@ -94,16 +94,13 @@
 \input{backmatter/authors}
 
 % Bibliography
-%\renewcommand\bibname{References}
-%\addcontentsline{toc}{part}{References}
 \bibliography{bibliography}
-%\bibliographystyle{plainnat}
-\bibliographystyle{abbrvnat}
-
-% Index
-\printindex
+\bibliographystyle{plainnat}
 
 % End full width
 \end{fullwidth}
+
+% Index
+%\printindex
 
 \end{document}
