Set options: a4paper, twoside, justified

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,4 @@
-\documentclass{layout/fenicsbook}
+\documentclass[a4paper,twoside,justified]{layout/fenicsbook}
 
 % Book metadata
 \title{Automated\\ \noindent Scientific\\ \noindent Computing}
@@ -39,6 +39,9 @@
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
+
+\end{fullwidth}
+\end{document}
 
 \part{Methodology}
 
