--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -4,14 +4,16 @@
 \usepackage{longtable}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{stmaryrd}
 
 \newcommand{\inner}[2]{\langle #1, #2 \rangle}
+\newcommand{\jump}[1]{\llbracket #1 \rrbracket}
+\newcommand{\avg}[1]{\langle #1 \rangle}
 \newcommand{\dx}{\, \mathrm{d}x}
 \newcommand{\ds}{\, \mathrm{d}s}
 \newcommand{\dt}{\, \mathrm{d}t}
 
-\title{Instructions for FEniCS book authors}
-\date{\today}
+\title{Instructions for FEniCS book authors} \date{\today}
 
 \begin{document}
 
@@ -21,9 +23,9 @@
 
 \begin{itemize}
 \item
-  Carefully read the comments from the referees and editors and update
-  your chapter accordingly. Send a detailed response to the referee
-  comments along with your revised chapter.
+  Carefully read the comments from the referees and editors, and
+  update your chapter accordingly. Send a detailed response to the
+  referee comments along with your revised chapter.
 \item
   Make sure to run a spell-checker (American English) before you
   submit your chapter.
@@ -32,11 +34,14 @@
   your chapter compiles without warnings.
 \item
   Submit your book chapter as a patch against the latest book
-  repository. Note in particular that the style files for the book
-  have changed, so changes should be make relative to the latest
-  version of your chapter in the book repository (not your local
-  copy). Note that your chapter may already have gone through some
-  minor modifications in order to compile against the new style files.
+  repository. Note that the style files for the book have changed, so
+  changes should be made relative to the latest version of your
+  chapter in the book repository (not your local copy). Note that your
+  chapter may already have gone through some minor modifications in
+  order to compile against the new style files.
+\item
+  Check that you have referenced all figures in your chapter and that
+  the figures look good. Avoid adding very large image files (in MB).
 \item
   Along with your submission, supply a short text for your
   affiliation, including your email address and any funding
@@ -45,9 +50,13 @@
 \item
   Make sure to browse through all other chapters and add appropriate
   references to other relevant chapters.
+\item
+  Each chapter should begin with a short 1--2 paragraph pre-intro
+  that introduces the chapter. Chapters should not have a first
+  section named ``Introduction''.
 \end{itemize}
 
-\section*{Spectific typesetting instructions}
+\section*{Specific typesetting instructions}
 
 \begin{itemize}
 \item
@@ -68,8 +77,10 @@
   Chapters should be referred to using \verb|Chapter~\ref{chap:prefix}|,
   where \verb|prefix| is the chapter prefix.
 \item
-  Use \verb|\eqref{}| to refer to equations. A typical usage would be \\
-  \verb|It follows from~\eqref{eq:hoffman-1:ns} that...|.
+  Use \verb|\eqref{}| to refer to equations. A typical usage would be:
+  \begin{verse}
+    \verb|It follows from~\eqref{eq:hoffman-1:ns} that...|.
+  \end{verse}
 \item
   All chapter labels should be prefixed with the type of label and the
   chapter prefix, for example \verb|fig:hoffman-1:foo| or
@@ -123,122 +134,174 @@
   where possible.
 \end{itemize}
 
-\section*{Variable names}
+\section*{Notation}
 
-Note two important changes relative to earlier versions of the
-book. First, the order of test and trial functions has changed. The
-canonical variational is now $a(u, v) = L(v)$. Second, the name
-notation of a cell/element has changed from $K$ to $T$.
+\begin{itemize}
+\item
+  The order of test and trial functions has changed. The
+  canonical variational is now $a(u, v) = L(v)$. Generally, we write:
+  \begin{equation}
+    F(f_1, \cdots, f_m; v_0, \dots, v_n)
+  \end{equation}
+  for a form $F$ that is linear in the variables $v_1, \dots, v_m$ (and
+  non-linear in the variables $f_1, \dots, f_m$.)
+\item
+  Second, the name of a cell/element has changed from $K$ to $T$.
+\item
+  Don't use bold fonts unless really, really required. In particular,
+  do not use bold fonts (nor super-imposed bars/arrows) to denote
+  vector fields.
+\item
+  Use either $\mathrm{grad}$, $\mathrm{curl}$, $\mathrm{div}$ or
+  $\nabla$, $\nabla \times$, $\nabla \cdot$, and make sure to follow the
+  new row-wise notation used in UFL, that is, $(\mathrm{grad} \, v)_{ij} =
+  \partial v_i / \partial x_j$ and $(\mathrm{div} \, v)_i = \partial v_{ij}
+  / \partial x_j$. Macros \verb|\Grad|, \verb|\Div|, \verb|\Curl| can
+  be used.
+\item
+  Use $\dx$ for integration, not $\mathrm{d}\Omega$.
+\item
+  Write the nonlinear term in Navier--Stokes as $\mathrm{grad} u \cdot u$ or
+  $\nabla u \cdot u$.
+\end{itemize}
 
-\section*{Names of variables}
+\subsection*{Function spaces}
 
-\small \linespread{1.2}
-  \begin{longtable}{ccl}
-    $A$ &--&
-    the \emph{global tensor} with entries $\{A_i\}_{i\in\mathcal{I}}$ \\
-    $A_T$ &--&
-    the \emph{element tensor} with entries $\{A^T_i\}_{i\in\mathcal{I}_T}$ \\
-    $A^0$ &--&
-    the \emph{reference tensor} with entries $\{A^0_{i\alpha}\}_{i\in\mathcal{I}_T,\alpha\in\mathcal{A}}$ \\
-    $a$ &--&
-    a multilinear form \\
-    $a_T$ &--&
-    the local contribution to a multilinear form $a$ from a cell $T$ \\
-    $\mathcal{A}$ &--&
-    the set of \emph{secondary indices} \\
-    $\mathcal{B}$ &--&
-    the set of \emph{auxiliary indices} \\
-    $e$ &--&
-    the \emph{error}, $e = u_h - u$ \\
-    $F_T$ &--&
-    the mapping from the reference cell $T_0$ to $T$ \\
-    $G_T$ &--&
-    the \emph{geometry tensor} with entries $\{G_T^{\alpha}\}_{\alpha\in\mathcal{A}}$ \\
-    $\mathcal{I}$ &--&
-    the set $\prod_{j=1}^{\rho} [1,N^j]$ of indices for the global tensor $A$ \\
-    $\mathcal{I}_T$ &--&
-    the set $\prod_{j=1}^{\rho} [1,n_T^j]$ of indices for the element tensor $A^T$ (\emph{primary indices}) \\
-    $\iota_T$ &--&
-    the \emph{local-to-global mapping} from $[1,n_T]$ to $[1,N]$ \\
-    $T$ &--&
-    a \emph{cell} in the mesh~$\mathcal{T}$ \\
-    $T_0$ &--&
-    the \emph{reference cell} \\
-    $L$ &--&
-    a linear form (functional) on $\hat{V}$ or $\hat{V}_h$ \\
-    $\mathcal{L}$ &--&
-    the degrees of freedom (linear functionals) on $V_h$ \\
-    $\mathcal{L}_T$ &--&
-    the degrees of freedom (linear functionals) on $\mathcal{P}_T$ \\
-    $\mathcal{L}_0$ &--&
-    the degrees of freedom (linear functionals) on $\mathcal{P}_0$ \\
-    $N$ &--&
-    the dimension of $\hat{V}_h$ and $V_h$ \\
-    $n_T$ &--&
-    the dimension of $\mathcal{P}_T$ \\
-    $\ell_i$ &--&
-    a degree of freedom (linear functional) on $V_h$ \\
-    $\ell^T_i$ &--&
-    a degree of freedom (linear functional) on $\mathcal{P}_T$ \\
-    $\ell^0_i$ &--&
-    a degree of freedom (linear functional) on $\mathcal{P}_0$ \\
-    $\mathcal{P}_T$ &--&
-    the local function space on a cell $T$ \\
-    $\mathcal{P}_0$ &--&
-    the local function space on the reference cell $T_0$ \\
-    $P_q(T)$ &--&
-    the space of polynomials of degree $\leq q$ on $T$ \\
-    $r$ &--&
-    the (weak) residual, $r(v) = a(v, u_h) - L(v)$ or $r(v) = F(u_h; v)$ \\
-    $u_h$ &--&
-    the finite element solution, $u_h \in V_h$ \\
-    $U$ &--&
-    the vector of degrees of freedom for $u_h = \sum_{i=1}^N U_i \phi_i$ \\
-    $u$ &--&
-    the exact solution of a variational problem, $u \in V$ \\
-    $\hat{V}$ &--&
-    the test space \\
-    $V$ &--&
-    the trial space \\
-    $\hat{V}^*$ &--&
-    the dual test space, $\hat{V}^* = V_0$ \\
-    $V^*$ &--&
-    the dual trial space, $V^* = \hat{V}$ \\
-    $\hat{V}_h$ &--&
-    the discrete test space \\
-    $V_h$ &--&
-    the discrete trial space \\
-    $\phi_i$ &--&
-    a basis function in $V_h$ \\
-    $\hat{\phi}_i$ &--&
-    a basis function in $\hat{V}_h$ \\
-    $\phi_i^T$ &--&
-    a basis function in $\mathcal{P}_T$ \\
-    $\Phi_i$ &--&
-    a basis function in $\mathcal{P}_0$ \\
-    $z$ &--&
-    the \emph{dual solution}, $z \in V^*$ \\
-    $\mathcal{T}$ &--&
-    the \emph{mesh}, $\mathcal{T} = \{T\}$ \\
-    $\Omega$ &--&
-    a bounded domain in~$\mathbb{R}^d$ \\
-    $k_n$ &--&
-    time step \\
-    $I_n$ &--&
-    time interval of length $k_{n} - k_{n-1}$ \\
-    $R_T$ &--&
-    strong residual on element $T$ \\
-    $R_{\partial T}$ &--&
-    strong residual on facet $\partial T$ \\
-    $u_{hk}$ &--&
-    the finite element solution in space-time \\
-    $S_n = \mathcal{T}\times I_n$ &--&
-    space-time slab \\
-    $\inner{v}{w}$ &--&
-    inner product, use macro \verb|\inner| \\
-    $\dx, \ds, \dt$ &--&
-    integration, use macros \verb|\dx|, \verb|\ds|, \verb|\dt| \\
-  \end{longtable}
-\linespread{1.0}
+\begin{longtable}{lcl}
+  $H^1(\Omega)$ & -- & the Sobolev space $W^{1,2}(\Omega)$ \\
+  $H^1_0(\Omega)$ & -- & the Sobolev space $W^{1,2}(\Omega)$, zero boundary trace \\
+  $[H^1(\Omega)]^n$ & -- & the Sobolev space $W^{1,2}(\Omega)$, vector-valued with $n$ components \\
+  $\mathrm{CG}_q(\Omega)$ & -- & continuous piecewise polynomial function space of degree $q$ \\
+  $\mathrm{DG}_q(\Omega)$ & -- & discontinuous piecewise polynomial function space of degree $q$ \\
+\end{longtable}
+
+\subsection*{Operators}
+
+\begin{longtable}{lcl}
+  $| \cdot |$ & -- & $\mathbb{R}^n$ norm \\
+  $\inner{v}{w}$ &--& inner product, use macro \verb|\inner| \\
+  $\| \cdot \|_V$ & -- & if $V$ is a normed space: norm on space $V$ \\
+  $\| \cdot \|_K$ & -- & if $K$ is a domain: $L^2(K)$ norm \\
+  $\| \cdot \|$ & -- & defaults to $L^2(\Omega)$ norm \\
+  $\| \cdot \|_0$ & -- & also $L^2(\Omega)$ norm \\
+  $\| \cdot \|_1$ & -- & $H^1(\Omega)$ norm \\
+  $\| \cdot \|_{\mathrm{div}}$ & -- & $H(\mathrm{div})$ norm \\
+  $\| \cdot \|_{\mathrm{curl}}$ & -- & $H(\mathrm{curl})$ norm \\
+  $\jump{v}$ & -- & jump, use macro \verb|\jump| \\
+  $\avg{v}$ & -- & average, use macro \verb|\avg| \\
+\end{longtable}
+
+\subsection*{Names of variables}
+
+\begin{longtable}{ccl}
+  $A$ &--&
+  the \emph{global tensor} with entries $\{A_i\}_{i\in\mathcal{I}}$ \\
+  $A_T$ &--&
+  the \emph{element tensor} with entries $\{A_{T,i}\}_{i\in\mathcal{I}_T}$ \\
+  $A^0$ &--&
+  the \emph{reference tensor} with entries $\{A^0_{i\alpha}\}_{i\in\mathcal{I}_T,\alpha\in\mathcal{A}}$ \\
+  $a$ &--&
+  a multilinear form \\
+  $a_T$ &--&
+  the local contribution to a multilinear form $a$ from a cell $T$ \\
+  $\mathcal{A}$ &--&
+  the set of \emph{secondary indices} \\
+  $\mathcal{B}$ &--&
+  the set of \emph{auxiliary indices} \\
+  %$e$ &--&
+  %the \emph{error}, $e = u - u_h$ \\
+  $F_T$ &--&
+  the mapping from the reference cell $T_0$ to $T$ \\
+  $G_T$ &--&
+  the \emph{geometry tensor} with entries $\{G_T^{\alpha}\}_{\alpha\in\mathcal{A}}$ \\
+  $\mathcal{I}$ &--&
+  the set $\prod_{j=1}^{\rho} [1,N_j]$ of indices for the global tensor $A$ \\
+  $\mathcal{I}^T$ &--&
+  the set $\prod_{j=1}^{\rho} [1,n_j^T]$ of indices for the element tensor $A^T$ (\emph{primary indices}) \\
+  $\iota_T$ &--&
+  the \emph{local-to-global mapping} from $[1,n_T]$ to $[1,N]$ \\
+  $T$ &--&
+  a \emph{cell} in the mesh~$\mathcal{T}$ \\
+  $T_0$ &--&
+  the \emph{reference cell} \\
+  $n$ &--&
+  unit normal vector (to boundary) \\
+  $t$ &--&
+  unit tangential vector (to boundary) \\
+  $L$ &--&
+  a linear form (functional) on $\hat{V}$ or $\hat{V}_h$ \\
+  $b$ &--&
+  a \emph{global} right-hand side vector, corresponding to $L(\phi_i)$ \\
+  $\mathcal{L}$ &--&
+  the degrees of freedom (linear functionals) on $V_h$ \\
+  $\mathcal{L}_T$ &--&
+  the degrees of freedom (linear functionals) on $\mathcal{P}_T$ \\
+  $\mathcal{L}_0$ &--&
+  the degrees of freedom (linear functionals) on $\mathcal{P}_0$ \\
+  %$N$ &--&
+  %the dimension of $\hat{V}_h$ and $V_h$ \\
+  %$n_T$ &--&
+  %the dimension of $\mathcal{P}_T$ \\
+  $\ell_i$ &--&
+  a degree of freedom (linear functional) on $V_h$ \\
+  $\ell^T_i$ &--&
+  a degree of freedom (linear functional) on $\mathcal{P}_T$ \\
+  $\ell^0_i$ &--&
+  a degree of freedom (linear functional) on $\mathcal{P}_0$ \\
+  %$\mathcal{P}_T$ &--&
+  %the local function space on a cell $T$ \\
+  %$\mathcal{P}_0$ &--&
+  %the local function space on the reference cell $T_0$ \\
+  $\mathcal{P}_q(T)$ &--&
+  the space of polynomials of degree $\leq q$ on a domain $T$ \\
+  %$r$ &--&
+  %the (weak) residual, $r(v) = a(v, u_h) - L(v)$ or $r(v) = F(u_h; v)$ \\
+  $u$ &--&
+  the exact solution of a variational problem, $u \in V$ \\
+  $u_h$ &--&
+  the finite element solution, $u_h \in V_h$ \\
+  $U$ &--&
+  the vector of degrees of freedom for $u_h = \sum_{i=1}^N U_i \phi_i$ \\
+  $V$ &--&
+  the trial space \\
+  $\hat{V}$ &--&
+  the test space \\
+  %$\hat{V}^*$ &--&
+  %the dual test space, $\hat{V}^* = V_0$ \\
+  $V^*$ &--&
+  the dual space (as in duality-based error analysis) of a space $V$ \\
+  $V_h$ &--&
+  the discrete trial space \\
+  $\hat{V}_h$ &--&
+  the discrete test space \\
+  $\phi_i$ &--&
+  a basis function in $V_h$ \\
+  $\hat{\phi}_i$ &--&
+  a basis function in $\hat{V}_h$ \\
+  %$\phi_i^T$ &--&
+  %a basis function in $\mathcal{P}_T$ \\
+  %$\Phi_i$ &--&
+  %a basis function in $\mathcal{P}_0$ \\
+  %$z$ &--&
+  %the \emph{dual solution}, $z \in V^*$ \\
+  $\mathcal{T}_h$ &--&
+  the \emph{mesh}, $\mathcal{T}_h = \{T\}$ \\
+  $\Omega$ &--&
+  a bounded domain in~$\mathbb{R}^d$ \\
+  $\partial \Omega$ &--&
+  the boundary of $\Omega$ \\
+  $k_n$ &--&
+  time step \\
+  $I_n$ &--&
+  time interval of length $k_{n} - k_{n-1}$ \\
+  $u_{hk}$ &--&
+  the finite element solution in space-time \\
+  $S_n$ &--&
+  space-time slab $\mathcal{T} \times I_n$ \\
+  $\dx, \ds, \dt$ &--&
+  integration, use macros \verb|\dx|, \verb|\ds|, \verb|\dt| \\
+  $X$ & -- & coordinates in a reference frame \\
+  $x$ & -- & coordinates in a physical space \\
+\end{longtable}
 
 \end{document}
