Add note on deadline

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -27,6 +27,8 @@
   update your chapter accordingly. Send a detailed response to the
   referee comments along with your revised chapter.
 \item
+  The deadline for submitting revised chapters is December 1 2010.
+\item
   Make sure to run a spell-checker (American English) before you
   submit your chapter.
 \item
