Add note to author instructions requiring all code to work with DOLFIN 0.9.9.

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -35,6 +35,14 @@
   Make sure that all references are complete and accurate and that
   your chapter compiles without warnings.
 \item
+  Make sure that all code examples are accurate and
+  up-to-date. \emph{All code presented in the book should be
+    compatible with DOLFIN 0.9.9!} Only minor interface changes (if
+  any) are expected before the release of DOLFIN 1.0 (expected in
+  January 2011). If further changes will be necessary after the
+  submission of your final chapter as a result of changes in the
+  DOLFIN interface, the editors will make those changes.
+\item
   Submit your book chapter as a patch against the latest book
   repository. Note that the style files for the book have changed, so
   changes should be made relative to the latest version of your
