Turn off index to avoid build error.

--- a/book.tex
+++ b/book.tex
@@ -101,7 +101,7 @@
 \end{fullwidth}
 
 % Index
-\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
-\printindex
+%\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
+%\printindex
 
 \end{document}
