Update notation instructions with comments from Garth.

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -130,9 +130,10 @@
   Titles of chapters, sections etc. should \emph{not} be capitalized
   (with the exception of names and the first letter).
 \item
-  Only number referenced equations. Use \verb|\begin/end{displaymath}|
-  or \verb|\begin/end{equation*}| until you find out that you actually
-  need to reference an equation.
+  Don't insert \verb|[H]| or \verb|[htbp]| etc. for floats. If
+  necessary, the editors will adjust this later.
+\item
+  Number \emph{all} equations, not just referenced equations.
 \item
   Use \emph{subcomponent}, \emph{subelement} instead of \emph{sub
     component}, \emph{sub element} etc.,
@@ -264,6 +265,8 @@
   %the local function space on the reference cell $T_0$ \\
   $\mathcal{P}_q(T)$ &--&
   the space of polynomials of degree $\leq q$ on a domain $T$ \\
+  $P_q$ &--&
+  the Lagrange finite element of degree $q$ \\
   %$r$ &--&
   %the (weak) residual, $r(v) = a(v, u_h) - L(v)$ or $r(v) = F(u_h; v)$ \\
   $u$ &--&
