Minor fix in notation

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -155,10 +155,10 @@
   The order of test and trial functions has changed. The canonical
   variational problem is now $a(u, v) = L(v)$. Generally, we write:
   \begin{equation}
-    F(f_1, \cdots, f_m; v_1, \dots, v_n)
+    F(f_1, \dots, f_m; v_1, \dots, v_n)
   \end{equation}
-  for a form $F$ that is linear in the variables $v_1, \dots, v_m$ (and
-  non-linear in the variables $f_1, \dots, f_m$.)
+  for a form $F$ that is (possibly) nonlinear in the variables $f_1, \dots, f_m$
+  and linear in the variables $v_1, \dots, v_n$.
 \item
   Second, the name of a cell/element has changed from $K$ to $T$.
 \item
