--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8476,6 +8476,12 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.07}
 }
 
+@Misc{www:sha1, 
+ author = {Tony Hansen and Garrett Wollman}, 
+ title = {US Secure Hash Algorithm 1 (SHA1)},
+ note = {\url{http://www.apps.ietf.org/rfc/rfc3174.html}}
+}
+
 @UNPUBLISHED{www:ferari,
   author = {Robert C. Kirby},
   title = {{FE}rari},
@@ -12994,7 +13000,8 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.06}
 }
 
-@UNPUBLISHED{www:python,
+@Misc{www:python,
+  author = {Guido van Rossum et. al.},
   title = {Python programming language},
   note = {\url{http://www.python.org}},
   key = {Python programming language},
@@ -13003,6 +13010,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @UNPUBLISHED{www:scipy,
+  author = {Travis Oliphant and Pearu Peterson and Eric Jones}
   title = {{SciPy} software package},
   note = {\url{http://www.scipy.org}},
   key = {{SciPy} software package},
@@ -13010,7 +13018,8 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.06}
 }
 
-@UNPUBLISHED{www:swig,
+@Misc{www:swig,
+  author = {David Beazley et al},
   title = {{SWIG} software package},
   note = {\url{http://www.swig.org}},
   key = {SWIG software package},
@@ -13058,7 +13067,8 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.06}
 }
 
-@UNPUBLISHED{www:weave,
+@Misc{www:weave,
+  author = {Eric Jones et. al.},
   title = {{Weave}: Tools for inlining {C/C++} in {Python}},
   note = {{\url{http://scipy.org/Weave}}},
   key = {{Weave}: Tools for inlining {C/C++} in {Python}},
