some more updates

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13019,7 +13019,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @Misc{www:swig,
-  author = {David Beazley et al},
+  author = {David Beazley et. al.},
   title = {{SWIG} software package},
   note = {\url{http://www.swig.org}},
   key = {SWIG software package},
