--- a/book.tex
+++ b/book.tex
@@ -37,53 +37,53 @@
 
 %------------------------------------------------------------------------------
 
-%\input{chapters/intro/chapter.tex}
-%\fenicsinput{langtangen}
-%
-%\part{Methodology}
-%
-%\fenicsinput{kirby-7}
-%\fenicsinput{kirby-6}
-%\fenicsinput{kirby-1}
-%\fenicsinput{kirby-5}
-%\fenicsinput{logg-3}
-%\fenicsinput{oelgaard-2}
-%\fenicsinput{kirby-8}
-%\fenicsinput{kirby-4}
-%\fenicsinput{hoffman-4}
-%
-%\part{Implementation}
-%
-%\fenicsinput{logg-2}
-%\fenicsinput{logg-1}
-%\fenicsinput{kirby-3}
-%\fenicsinput{kirby-2}
+\input{chapters/intro/chapter.tex}
+\fenicsinput{langtangen}
+
+\part{Methodology}
+
+\fenicsinput{kirby-7}
+\fenicsinput{kirby-6}
+\fenicsinput{kirby-1}
+\fenicsinput{kirby-5}
+\fenicsinput{logg-3}
+\fenicsinput{oelgaard-2}
+\fenicsinput{kirby-8}
+\fenicsinput{kirby-4}
+\fenicsinput{hoffman-4}
+
+\part{Implementation}
+
+\fenicsinput{logg-2}
+\fenicsinput{logg-1}
+\fenicsinput{kirby-3}
+\fenicsinput{kirby-2}
 \fenicsinput{wilbers}
-%\fenicsinput{alnes-3}
-%\fenicsinput{alnes-2}
-%\fenicsinput{alnes-1}
-%\fenicsinput{hoffman-2}
-%\fenicsinput{mardal-2}
-%
-%\part{Applications}
-%
-%\fenicsinput{terrel}
-%\fenicsinput{kvs-1}
-%\fenicsinput{mortensen}
-%\fenicsinput{kvs-2}
-%\fenicsinput{hentschel}
-%\fenicsinput{hoffman-1}
-%\fenicsinput{lopes}
-%\fenicsinput{shan}
-%\fenicsinput{hake}
-%\fenicsinput{lezar}
-%\fenicsinput{oelgaard-1}
-%%\fenicsinput{narayanan}
-%\fenicsinput{nikbakht}
-%\fenicsinput{schroll}
-%\fenicsinput{hoffman-3}
-%\fenicsinput{mardal-4}
-%\fenicsinput{rognes}
+\fenicsinput{alnes-3}
+\fenicsinput{alnes-2}
+\fenicsinput{alnes-1}
+\fenicsinput{hoffman-2}
+\fenicsinput{mardal-2}
+
+\part{Applications}
+
+\fenicsinput{terrel}
+\fenicsinput{kvs-1}
+\fenicsinput{mortensen}
+\fenicsinput{kvs-2}
+\fenicsinput{hentschel}
+\fenicsinput{hoffman-1}
+\fenicsinput{lopes}
+\fenicsinput{shan}
+\fenicsinput{hake}
+\fenicsinput{lezar}
+\fenicsinput{oelgaard-1}
+%\fenicsinput{narayanan}
+\fenicsinput{nikbakht}
+\fenicsinput{schroll}
+\fenicsinput{hoffman-3}
+\fenicsinput{mardal-4}
+\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
 
