Replace package pythonhighlight with Hake's codehighlight that provides both 'python' and 'c++' environments.

--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -18,6 +18,7 @@
 \colorlet{literatecolour}{magenta!90!black}
 \colorlet{promptcolour}{green!50!black}
 \colorlet{specmethodcolour}{violet}
+\colorlet{indendifiercolour}{green!70!white}
 
 %\newcommand{\Matlab}{Matlab}
 
@@ -35,7 +36,7 @@ commentstyle=\color{commentcolour}\slshape,
 keywordstyle=\color{keywordcolour}\bfseries,
 }}{}
 
-\newcommand{\framemargin}{3ex}
+\newcommand{\framemargin}{5ex}
 
 \newcommand{\literatecolour}{\textcolor{literatecolour}}
 
@@ -90,10 +91,14 @@ literate=*%
 {>}{{\literatecolour>}}{1}%
 {>>>}{{\textcolor{promptcolour}{>>>}}}{1}%
 ,%
-%aboveskip=.5ex,
+breaklines=true,
+breakatwhitespace= true,
+xleftmargin=\framemargin,
+xrightmargin=\framemargin,
+aboveskip=1ex,
 frame=trbl,
 %frameround=tttt,
-%framesep=.3ex,
+framesep=.3ex,
 rulecolor=\color{black!40},
 %framexleftmargin=\framemargin,
 %framextopmargin=.1ex,
@@ -111,3 +116,88 @@ backgroundcolor=\color{yellow!10}
 \newcommand{\pyth}{\lstinline[style=mypython,basicstyle=\ttfamily]}
 
 \def\command{\pyth}
+
+\lstdefinestyle{mycpp}{
+%\lstset{
+%keepspaces=true,
+language=c++,
+showtabs=true,
+tab=,
+tabsize=2,
+basicstyle=\ttfamily\footnotesize,%\setstretch{.5},
+stringstyle=\color{stringcolour},
+showstringspaces=false,
+alsoletter={1234567890},
+%otherkeywords={\ , \}, \{, \%, \&, \|},
+keywordstyle=\color{keywordcolour}\bfseries,
+emph={auto,const,struct,%
+break,continue,else,for,switch,void,%
+case,default,enum,goto,register,sizeof,typedef,%
+char,do,extern,if,return,static,union,while,%
+asm,dynamic_cast,namespace,reinterpret_cast,try,%
+bool,explicit,new,static_cast,typeid,volatile,%
+catch,operator,template,typename,%
+class,friend,private,this,using,%
+const_cast,inline,public,throw,virtual,%
+delete,mutable,protected,wchar_t,%
+or,and,xor,not,assert},
+emphstyle=\color{blue}\bfseries,
+emph={[2]true, false, NULL},
+emphstyle=[2]\color{keywordcolour},
+emph={[3]double,float,int,short,unsigned,long,signed},
+emphstyle=[3]\color{blue},
+%emph={[3]object,type,isinstance,copy,deepcopy,zip,enumerate,reversed,list,len,dict,tuple,xrange,append,execfile,real,imag,reduce,str,repr},
+%emph={Exception,NameError,IndexError,SyntaxError,TypeError,ValueError,OverflowError,ZeroDivisionError},
+%emphstyle=\color{exceptioncolour}\bfseries,
+%upquote=true,
+emph={[4]1, 2, 3, 4, 5, 6, 7, 8, 9, 0},
+emph={[4]cos,sin,tan,acos,asin,atan,atan2,cosh,sinh,tanh,%
+exp,frexp,ldexp,log,log10,modf,pow,sqrt,ceil,fabs,floor,fmod},
+emphstyle=[4]\color{numpycolour},
+literate=*%
+{:}{{\literatecolour:}}{1}%
+{=}{{\literatecolour=}}{1}%
+{-}{{\literatecolour-}}{1}%
+{+}{{\literatecolour+}}{1}%
+{*}{{\literatecolour*}}{1}%
+%{/}{{\literatecolour/}}{1}%
+{!}{{\literatecolour!}}{1}%
+%{(}{{\literatecolour(}}{1}%
+%{)}{{\literatecolour)}}{1}%
+{[}{{\literatecolour[}}{1}%
+{]}{{\literatecolour]}}{1}%
+{<}{{\literatecolour<}}{1}%
+{>}{{\literatecolour>}}{1}%
+{>>>}{{\textcolor{promptcolour}{>>>}}}{1}%
+,%
+commentstyle=\color{commentcolour}\slshape,
+morecomment=[l][commentstyle]{//},
+morecomment=[s][commentstyle]{/*}{*/},
+morecomment=[n][commentstyle]{(*}{*)},
+morestring=[b][stringstyle]",
+morestring=[d][stringstyle]',
+breaklines=true,
+breakatwhitespace= true,
+xleftmargin=\framemargin,
+xrightmargin=\framemargin,
+aboveskip=1ex,
+frame=trbl,
+%frameround=tttt,
+%framesep=.3ex,
+rulecolor=\color{black!40},
+%framexleftmargin=\framemargin,
+%framextopmargin=.1ex,
+%framexbottommargin=.1ex,
+%framexrightmargin=\framemargin,
+%framexleftmargin=1mm, framextopmargin=1mm, frame=shadowbox, rulesepcolor=\color{blue},#1
+%frame=tb,
+backgroundcolor=\color{yellow!10}
+%}
+}
+
+\newcommand{\inputcpp}[3]{\lstinputlisting[firstline=#1,lastline=#2,firstnumber=#1,frame=single,breakindent=.5\textwidth,frame=single,breaklines=true,style=mycpp]{#3}}
+
+\lstnewenvironment{c++}[1][]{\lstset{style=mycpp}}{}
+
+%\newcommand{\c++}{\lstinline[style=mycpp,basicstyle=\ttfamily]}
+
