Change bibliography style to abbrvnat

--- a/book.tex
+++ b/book.tex
@@ -95,7 +95,7 @@
 
 % Bibliography
 \bibliography{bibliography}
-\bibliographystyle{plainnat}
+\bibliographystyle{abbrvnat}
 
 % End full width
 \end{fullwidth}
