Fixes for crosslanguage chapter (mardal-2)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9217,6 +9217,17 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.06}
 }
 
+@Book{Langtangen2008,
+  author = {Langtangen, Hans Petter},
+  title = {Python Scripting for Computational Science},
+  year = {2008},
+  abstract = {},
+  publisher = {Springer},
+  address = {Heidelberg},
+  edition = {third},
+  isbn = {978-3-540-73915-9}
+}
+
 @BOOK{Langtangen2003,
   title = {Computational Partial Differential Equations - Numerical Methods
 	and Diffpack Programming},
@@ -9239,6 +9250,21 @@ symmetric formulations that converge for all velocity/pressure spaces},
   note = {855 p. \url{http://www.diffpack.com}},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@Inbook{Langtangen2003b,
+  author = {Langtangen, H P and Mardal, K -A},
+  title = {Using Diffpack from Python Scripts},
+  year = {2003},
+  abstract = {},
+  booktitle = {Advanced Topics in Computational Partial
+                   Differential Equations - Numerical Methods and
+                   Diffpack Programming},
+  editor = {Langtangen, H.P. and Tveito, A.},
+  publisher = {Springer-Verlag},
+  series = {Lecture Notes in Computational Science and
+                   Engineering},
+  pages = {321-360}
 }
 
 @BOOK{Langtangen1999,
@@ -12020,7 +12046,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 
 @ARTICLE{SternSongEtAl1999,
   author = {M. D. Stern and L. S. Song and H. Cheng and J. S. Sham and H. T.
-	Yang and K. R. Boheler and E. Ríos},
+	Yang and K. R. Boheler and E. R\'{i}os},
   title = {Local control models of cardiac excitation-contraction coupling.
 	A possible role for allosteric interactions between ryanodine receptors.},
   journal = {J. Gen. Physiol.},
@@ -12984,6 +13010,25 @@ symmetric formulations that converge for all velocity/pressure spaces},
   timestamp = {2009.06.06}
 }
 
+
+@UNPUBLISHED{www:python-capi,
+  title = {{Python C API Reference Manual}},
+  note = {\url{http://docs.python.org/c-api}},
+  key = {Python C-API},
+}
+
+@UNPUBLISHED{www:python-extending,
+  title = {{E}xtending and {E}mbedding the {P}ython {I}nterpreter},
+  note = {\url{http://docs.python.org/extending}},
+  key = {extending Python},
+}
+
+@UNPUBLISHED{SIP,
+  title = {{SIP}; {P}ython extension module generator},
+  note = {\url{http://www.riverbankcomputing.com/software/sip/intro}},
+  key = {SIP},
+}
+
 @UNPUBLISHED{www:pymat,
   title = {PyMat {Python-Matlab} interface},
   note = {\url{http://claymore.engineer.gvsu.edu/~steriana/Python}},
@@ -12991,6 +13036,14 @@ symmetric formulations that converge for all velocity/pressure spaces},
   owner = {logg},
   timestamp = {2009.06.06}
 }
+
+@UNPUBLISHED{Siloon,
+  title = {{SILOON}, {S}cripting {I}nterface {L}anguages for {O}bject-{O}riented {N}umerics},
+  note = {\url{http://acts.nersc.gov/siloon/index.html}},
+  key = {{SILOON}},
+}
+
+
 
 @UNPUBLISHED{www:pyrex,
   title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
@@ -13137,6 +13190,18 @@ symmetric formulations that converge for all velocity/pressure spaces},
   number = {165},
 }
 
+@ARTICLE{GreensteinEtAl2002,
+  author = {Joseph L Greenstein and Raimond L Winslow},
+  title = {An integrative model of the cardiac ventricular myocyte incorporating
+	local control of {C}a$^{2+}$ release.},
+  journal = {Biophys. J.},
+  year = {2002},
+  volume = {83},
+  pages = {2918--2945},
+  number = {6},
+  month = {Dec},
+  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
+}
 
 
 @comment{jabref-meta: fileDirectory:.;}
