--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{pythonhighlight}[2009/03/28 python code highlighting; provided by Olivier Verdier <olivier@maths.lth.se>]
+\ProvidesPackage{codehighlight}[2009/03/28 code highlighting; provided by Olivier Verdier <olivier@maths.lth.se>]
 
 
 \RequirePackage{listings}
@@ -173,7 +173,6 @@ literate=*%
 commentstyle=\color{commentcolour}\slshape,
 morecomment=[l][commentstyle]{//},
 morecomment=[s][commentstyle]{/*}{*/},
-morecomment=[n][commentstyle]{(*}{*)},
 morestring=[b][stringstyle]",
 morestring=[d][stringstyle]',
 breaklines=true,
@@ -195,9 +194,35 @@ backgroundcolor=\color{yellow!10}
 %}
 }
 
-\newcommand{\inputcpp}[3]{\lstinputlisting[firstline=#1,lastline=#2,firstnumber=#1,frame=single,breakindent=.5\textwidth,frame=single,breaklines=true,style=mycpp]{#3}}
+\newcommand{\inputcpp}[1]{\lstinputlisting[style=mycpp]{#1}}
 
 \lstnewenvironment{c++}[1][]{\lstset{style=mycpp}}{}
 
 %\newcommand{\c++}{\lstinline[style=mycpp,basicstyle=\ttfamily]}
 
+\lstdefinestyle{mybash}{
+%\lstset{
+%keepspaces=true,
+language=bash,
+showtabs=true,
+tab=,
+tabsize=2,
+basicstyle=\ttfamily\footnotesize,%\setstretch{.5},
+stringstyle=\color{stringcolour},
+showstringspaces=false,
+alsoletter={1234567890},
+otherkeywords={\ , \}, \{, \%, \&, \|},
+emphstyle=\color{exceptioncolour}\bfseries,
+commentstyle=\color{commentcolour}\slshape,
+breaklines=true,
+breakatwhitespace= true,
+xleftmargin=\framemargin,
+xrightmargin=\framemargin,
+aboveskip=1ex,
+frame=trbl,
+framesep=.3ex,
+rulecolor=\color{black!40},
+backgroundcolor=\color{yellow!10}
+}
+
+\lstnewenvironment{bash}[1][]{\lstset{style=mybash}}{}
