Added bibitem from Harish.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,7 +4,7 @@
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
 @INPROCEEDINGS{WilbersLangtangenO2009,
-  author = {{ Wilbers, I.M. and Langtangen,  H. P. and \O deg\aa rd, \AA.}},
+  author = {{ Wilbers, I.M. and Langtangen, H. P. and \O deg\aa rd, \AA.}},
   title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
   booktitle = {MekIT'09, Fifth national conference on Computational Mechanics},
   year = {2009},
@@ -1231,7 +1231,7 @@
 }
 
 @ARTICLE{BellinSalandinRinaldo1992,
-  author = {Bellin, A. and  Salandin, S. and Rinaldo, A.},
+  author = {Bellin, A. and Salandin, S. and Rinaldo, A.},
   title = {Simulation of dispersion in heterogeneous porous formations: Statistics,
 	first-order theories, convergence of computations},
   journal = {Water Resour. Res.},
@@ -4675,6 +4675,19 @@
   doi = {http://dx.doi.org/10.1016/j.jcp.2005.04.013},
   issn = {0021-9991},
   publisher = {Academic Press Professional, Inc.}
+}
+
+@ARTICLE{HilberHughesTaylor1977,
+  author = {H. M. Hilber and T. J. R. Hughes and R. L. Taylor},
+  title = {Improved numerical dissipation for time integration algorithms in
+	structural dynamics},
+  journal = {Earthquake Engineering and Structural Dynamics},
+  year = {1977},
+  volume = {5},
+  pages = {283--292},
+  number = {3},
+  owner = {massing},
+  timestamp = {2010.11.18}
 }
 
 @BOOK{Hille2001,
@@ -10754,8 +10767,7 @@
 }
 
 @INPROCEEDINGS{WilbersLangtangenOdegaard2009,
-  author = {{Wilbers, I. M.  and Langtangen,  H. P.  and {\O}deg\aa rd}, {\r
-	A}.},
+  author = {{Wilbers, I. M. and Langtangen, H. P. and {\O}deg\aa rd}, {\r A}.},
   title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
   booktitle = {Proceedings of MekIT'09},
   year = {2009},
