Another try to make corrections to the mardal-2 chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9959,54 +9959,6 @@
   number = {165}
 }
 
-@ARTICLE{SternSongChengEtAl1999,
-  author = {M. D. Stern and L. S. Song and H. Cheng and J. S. Sham and H. T.
-	Yang and K. R. Boheler and E. Ríos},
-  title = {Local control models of cardiac excitation-contraction coupling.
-	A possible role for allosteric interactions between ryanodine receptors.},
-  journal = {J. Gen. Physiol.},
-  year = {1999},
-  volume = {113},
-  pages = {469--489},
-  number = {3},
-  month = {Mar},
-  abstract = {In cardiac muscle, release of activator calcium from the sarcoplasmic
-	reticulum occurs by calcium- induced calcium release through ryanodine
-	receptors (RyRs), which are clustered in a dense, regular, two-dimensional
-	lattice array at the diad junction. We simulated numerically the
-	stochastic dynamics of RyRs and L-type sarcolemmal calcium channels
-	interacting via calcium nano-domains in the junctional cleft. Four
-	putative RyR gating schemes based on single-channel measurements
-	in lipid bilayers all failed to give stable excitation-contraction
-	coupling, due either to insufficiently strong inactivation to terminate
-	locally regenerative calcium-induced calcium release or insufficient
-	cooperativity to discriminate against RyR activation by background
-	calcium. If the ryanodine receptor was represented, instead, by a
-	phenomenological four-state gating scheme, with channel opening resulting
-	from simultaneous binding of two {C}a$^{2+}$ ions, and either calcium-dependent
-	or activation-linked inactivation, the simulations gave a good semiquantitative
-	accounting for the macroscopic features of excitation-contraction
-	coupling. It was possible to restore stability to a model based on
-	a bilayer-derived gating scheme, by introducing allosteric interactions
-	between nearest-neighbor RyRs so as to stabilize the inactivated
-	state and produce cooperativity among calcium binding sites on different
-	RyRs. Such allosteric coupling between RyRs may be a function of
-	the foot process and lattice array, explaining their conservation
-	during evolution.},
-  file = {Ster_1999_469.pdf:Ster_1999_469.pdf:PDF;Ster_1999_469.pdf:Ster_1999_469.pdf:PDF},
-  institution = {Laboratory of Cardiovascular Science, National Institute on Aging,
-	National Institutes of Health, Baltimore, Maryland 21224, USA. sternM@grc.nia.nih.gov},
-  keywords = {Algorithms; Animals; Calcium Channels, L-Type; Calcium Channels, physiology;
-	Computer Simulation; Energy Metabolism, physiology; Heart, physiology;
-	Ion Channel Gating, physiology; Models, Biological; Monte Carlo Method;
-	Muscle Proteins, physiology; Myocardial Contraction, physiology;
-	Rats; Ryanodine Receptor Calcium Release Channel, physiology; Sarcoplasmic
-	Reticulum, metabolism},
-  pmid = {10051521},
-  timestamp = {2008.09.04},
-  url = {http://www.jgp.org/cgi/content/abstract/113/3/469}
-}
-
 @ARTICLE{Stewartson1981,
   author = {K. Stewartson},
   title = {D'Alembert's Paradox},
@@ -11320,6 +11272,84 @@
   timestamp = {2009.06.06}
 }
 
+
+@Book{Langtangen2008,
+  author = {Langtangen, Hans Petter},
+  title = {Python Scripting for Computational Science},
+  year = {2008},
+  abstract = {},
+  publisher = {Springer},
+  address = {Heidelberg},
+  edition = {third},
+  isbn = {978-3-540-73915-9}
+}
+
+
+@Inbook{Langtangen2003b,
+  author = {Langtangen, H P and Mardal, K -A},
+  title = {Using Diffpack from Python Scripts},
+  year = {2003},
+  abstract = {},
+  booktitle = {Advanced Topics in Computational Partial
+                   Differential Equations - Numerical Methods and
+                   Diffpack Programming},
+  editor = {Langtangen, H.P. and Tveito, A.},
+  publisher = {Springer-Verlag},
+  series = {Lecture Notes in Computational Science and
+                   Engineering},
+  pages = {321-360}
+}
+
+
+@ARTICLE{SternSongEtAl1999,
+  author = {M. D. Stern and L. S. Song and H. Cheng and J. S. Sham and H. T.
+       Yang and K. R. Boheler and E. R\'{i}os},
+  title = {Local control models of cardiac excitation-contraction coupling.
+       A possible role for allosteric interactions between ryanodine receptors.},
+  journal = {J. Gen. Physiol.},
+  timestamp = {2009.06.06}
+}
+
+
+@UNPUBLISHED{www:python-capi,
+  title = {{Python C API Reference Manual}},
+  note = {\url{http://docs.python.org/c-api}},
+  key = {Python C-API},
+}
+
+@UNPUBLISHED{www:python-extending,
+  title = {{E}xtending and {E}mbedding the {P}ython {I}nterpreter},
+  note = {\url{http://docs.python.org/extending}},
+  key = {extending Python},
+}
+
+@UNPUBLISHED{SIP,
+  title = {{SIP}; {P}ython extension module generator},
+  note = {\url{http://www.riverbankcomputing.com/software/sip/intro}},
+  key = {SIP},
+}
+
+
+@UNPUBLISHED{Siloon,
+  title = {{SILOON}, {S}cripting {I}nterface {L}anguages for {O}bject-{O}riented {N}umerics},
+  note = {\url{http://acts.nersc.gov/siloon/index.html}},
+  key = {{SILOON}},
+}
+
+@ARTICLE{GreensteinEtAl2002,
+  author = {Joseph L Greenstein and Raimond L Winslow},
+  title = {An integrative model of the cardiac ventricular myocyte incorporating
+       local control of {C}a$^{2+}$ release.},
+  journal = {Biophys. J.},
+  year = {2002},
+  volume = {83},
+  pages = {2918--2945},
+  number = {6},
+  month = {Dec},
+  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
+}
+ 
+ 
 @comment{jabref-meta: fileDirectory:.;}
 
 @comment{jabref-meta: groupsversion:3;}
