Added nonlinear elasticity chapter

--- a/book.tex
+++ b/book.tex
@@ -78,7 +78,7 @@
 \fenicsinput{hake}
 \fenicsinput{lezar}
 \fenicsinput{oelgaard-1}
-%\fenicsinput{narayanan}
+\fenicsinput{narayanan}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
 \fenicsinput{hoffman-3}
