Reorganize order of chapters in part III, trying to group chapters by theme.

--- a/book.tex
+++ b/book.tex
@@ -70,18 +70,19 @@
 \fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
+\fenicsinput{hoffman-1}
+%\fenicsput{selim}
+\fenicsinput{shan}
+\fenicsinput{lopes}
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
-\fenicsinput{hoffman-1}
-\fenicsinput{lopes}
-\fenicsinput{shan}
-\fenicsinput{hake}
-\fenicsinput{lezar}
-\fenicsinput{oelgaard-1}
 \fenicsinput{narayanan}
+\fenicsinput{oelgaard-1}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
-\fenicsinput{hoffman-3}
+\fenicsinput{hake}
+\fenicsinput{lezar}
+%\fenicsinput{hoffman-3}
 \fenicsinput{mardal-4}
 \fenicsinput{rognes}
 
