Removing trailing whitespace in bibliography and fix minor typo

--- a/book.tex
+++ b/book.tex
@@ -37,54 +37,54 @@
 
 %------------------------------------------------------------------------------
 
-\input{chapters/intro/chapter.tex}
-\fenicsinput{langtangen}
+%\input{chapters/intro/chapter.tex}
+%\fenicsinput{langtangen}
 
-\part{Methodology}
+%\part{Methodology}
 
-\fenicsinput{kirby-7}
-\fenicsinput{kirby-6}
-\fenicsinput{kirby-1}
-\fenicsinput{kirby-5}
-\fenicsinput{logg-3}
-\fenicsinput{oelgaard-2}
-\fenicsinput{kirby-8}
-\fenicsinput{kirby-4}
-\fenicsinput{hoffman-4}
+%\fenicsinput{kirby-7}
+%\fenicsinput{kirby-6}
+%\fenicsinput{kirby-1}
+%\fenicsinput{kirby-5}
+%\fenicsinput{logg-3}
+%\fenicsinput{oelgaard-2}
+%\fenicsinput{kirby-8}
+%\fenicsinput{kirby-4}
+%\fenicsinput{hoffman-4}
 
-\part{Implementation}
+%\part{Implementation}
 
-\fenicsinput{logg-2}
-\fenicsinput{logg-1}
-\fenicsinput{kirby-3}
-\fenicsinput{kirby-2}
-\fenicsinput{wilbers}
-\fenicsinput{alnes-3}
-\fenicsinput{alnes-2}
-\fenicsinput{alnes-1}
-\fenicsinput{hoffman-2}
-\fenicsinput{mardal-2}
+%\fenicsinput{logg-2}
+%\fenicsinput{logg-1}
+%\fenicsinput{kirby-3}
+%\fenicsinput{kirby-2}
+%\fenicsinput{wilbers}
+%\fenicsinput{alnes-3}
+%\fenicsinput{alnes-2}
+%\fenicsinput{alnes-1}
+%\fenicsinput{hoffman-2}
+%\fenicsinput{mardal-2}
 
-\part{Applications}
+%\part{Applications}
 
-\fenicsinput{terrel}
-\fenicsinput{kvs-1}
-\fenicsinput{mortensen}
-\fenicsinput{hoffman-1}
-%\fenicsput{selim}
-\fenicsinput{shan}
-\fenicsinput{lopes}
-\fenicsinput{kvs-2}
-\fenicsinput{hentschel}
-\fenicsinput{narayanan}
-\fenicsinput{oelgaard-1}
-\fenicsinput{nikbakht}
-\fenicsinput{schroll}
-\fenicsinput{hake}
-\fenicsinput{lezar}
-%\fenicsinput{hoffman-3}
-\fenicsinput{mardal-4}
-\fenicsinput{rognes}
+%\fenicsinput{terrel}
+%\fenicsinput{kvs-1}
+%\fenicsinput{mortensen}
+%\fenicsinput{hoffman-1}
+\fenicsinput{selim}
+%\fenicsinput{shan}
+%\fenicsinput{lopes}
+%\fenicsinput{kvs-2}
+%\fenicsinput{hentschel}
+%\fenicsinput{narayanan}
+%\fenicsinput{oelgaard-1}
+%\fenicsinput{nikbakht}
+%\fenicsinput{schroll}
+%\fenicsinput{hake}
+%\fenicsinput{lezar}
+%%\fenicsinput{hoffman-3}
+%\fenicsinput{mardal-4}
+%\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
 
