Small fix in bibliography and remove a LaTeX warning from the Tufte class

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3589,14 +3589,13 @@
   url = {http://dx.doi.org/10.1108/03321640210410814}
 }
 
-@ARTICLE{FickZeeBrummelen2008,
+@TECHREPORT{FickZeeBrummelen2008,
   author = {Fick, PW and van der Zee, KG and van Brummelen, EH},
   title = {{Goal-oriented a-posteriori error estimation and adaptivity for fluid-structure
 	interaction}},
+  institution = {Aerospace Computational Science},
   year = {2008},
-  file = {:FickZeeEtAl2008.pdf:PDF},
-  publisher = {Tech. Report DACS-01-008, Delft Aerospace Computational Science,
-	2008, To appear}
+  number = {Tech. Report DACS-01-008},
 }
 
 @ARTICLE{FisherRossmann2009,
