Bug fix in bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3590,7 +3590,7 @@
 }
 
 @TECHREPORT{FickZeeBrummelen2008,
-  author = {Fick, PW and van der Zee, KG and van Brummelen, EH},
+  author = {Fick, P. W. and van der Zee, K. G. and van Brummelen, E. H.},
   title = {{Goal-oriented a-posteriori error estimation and adaptivity for fluid-structure
 	interaction}},
   institution = {Aerospace Computational Science},
