Add chapter [selim]

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2558,14 +2558,11 @@
 }
 
 @PHDTHESIS{Dunne2007,
-  author = {Dunne, T.},
-  title = {{Adaptive Finite Element Approximation of Fluid-Structure Interaction
-	Based on Eulerian and Arbitrary Lagrangian-Eulerian Variational Formulations}},
-  school = {Universit{\"a}tsbibliothek},
+  author = {Thomas Dunne},
+  title = {Adaptive Finite Element Approximation of Fluid-Structure Interaction
+        Based on Eulerian and Arbitrary Lagrangian-Eulerian Variational Formulations},
+  school = {Ruprecht-Karls-Universität, Heidelberg},
   year = {2007},
-  file = {:Dunne2007.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.25}
 }
 
 @ARTICLE{DunneRannacher2006,
@@ -3329,7 +3326,6 @@
   number = {1},
   doi = {DOI: 10.1016/0021-9991(79)90088-3},
   issn = {0021-9991},
-  url = {http://www.sciencedirect.com/science/article/B6WHY-4DDR25D-N/2/cab781973346c9bfe15f3e2012025ecc}
 }
 
 @BOOK{GolubLoan1989,
@@ -7038,8 +7034,7 @@
 
 @PHDTHESIS{Narayanan2007,
   author = {Harish Narayanan},
-  title = {A CONTINUUM THEORY OF MULTIPHASE MIXTURES FOR MODELLING BIOLOGICAL
-	GROWTH},
+  title = {A Continuum Theory of Multiphase Mixtures for Modelling Biological Growth},
   school = {University of Michigan},
   year = {2007}
 }
@@ -8831,7 +8826,7 @@
 }
 
 @PHDTHESIS{Van2009,
-  author = {Van der Zee, K. G.},
+  author = {van der Zee, K. G.},
   title = {Goal-Adaptive Discretization of Fluid-Structure Interaction},
   school = {Technische Universiteit Delft},
   year = {2009}
