Small fix in bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -32,7 +32,7 @@
 
 @ARTICLE{OlgaardLoggWells2008,
   author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
-  title = {Automated code generation for discontinuous Galerkin methods},
+  title = {Automated code generation for discontinuous {G}alerkin methods},
   journal = {{SIAM} Journal on Scientific Computing},
   year = {2008},
   volume = {31},
