Small corrections in Bibliography. BibTeX now runs without complains.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3418,8 +3418,8 @@
 @ARTICLE{Griewank1989,
   author = {Andreas Griewank},
   title = {On Automatic Differentiation},
-  journal = {In} {Mathematical} {Programming:} {Recent} {Developments} {and}
-	{Applications},
+  journal = {{In} {Mathematical} {Programming:} {Recent} {Developments} {and}
+	{Applications}},
   year = {1989},
   pages = {83---108},
   doi = {10.1.1.54.2317},
@@ -6939,7 +6939,7 @@
 }
 
 @ARTICLE{MoinMahesh1998,
-  author = {Moin, P. and {Mahesh, K.},
+  author = {Moin, P. and Mahesh, K.},
   title = {Direct Numerical Simulation: A Tool in Turbulence Research},
   journal = {Annual Review of Fluid Mechanics},
   year = {1998},
@@ -7490,7 +7490,6 @@
   publisher = {John Wiley \& Sons Inc},
   year = {1984},
   author = {Panton, RL},
-	1984}
 }
 
 @ARTICLE{PasciakWang2006,
@@ -9720,6 +9719,11 @@
   title = {Local control models of cardiac excitation-contraction coupling.
        A possible role for allosteric interactions between ryanodine receptors.},
   journal = {J. Gen. Physiol.},
+  year = {1999},
+  volume = {113},
+  pages = {469--489},
+  number = {3},
+  month = {Mar},
   timestamp = {2009.06.06}
 }
 
