Added tripple quote to strings in Python highlights.

--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -64,7 +64,8 @@ emphstyle=[3]\color{commandcolour},
 emph={Exception,NameError,IndexError,SyntaxError,TypeError,ValueError,OverflowError,ZeroDivisionError},
 emphstyle=\color{exceptioncolour}\bfseries,
 %upquote=true,
-morecomment=[s]{"""}{"""},
+morestring=[s]{"""}{"""},
+morestring=[s]{'''}{'''},
 commentstyle=\color{commentcolour}\slshape,
 %emph={[4]1, 2, 3, 4, 5, 6, 7, 8, 9, 0},
 emph={[4]ode, fsolve, sqrt, exp, sin, cos, arccos, pi,  array, norm, solve, dot, arange, , isscalar, max, sum, flatten, shape, reshape, find, any, all, abs, plot, linspace, legend, quad, polyval,polyfit, hstack, concatenate,vstack,column_stack,empty,zeros,ones,rand,vander,grid,pcolor,eig,eigs,eigvals,svd,qr,tan,det,logspace,roll,min,mean,cumsum,cumprod,diff,vectorize,lstsq,cla,eye,xlabel,ylabel,squeeze},
